---
source: crates/postgres/tests/integration/tags/detach_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
DELETE FROM
  "tag_paths"
WHERE
  ("ancestor_id", "descendant_id", "distance") IN (
    SELECT
      "tag_path_ancestors"."ancestor_id",
      "tag_path_descendants"."descendant_id",
      "tag_path_ancestors"."distance" + "tag_path_descendants"."distance"
    FROM
      "tag_paths" AS "tag_path_ancestors"
    INNER JOIN
      "tag_paths" AS "tag_path_descendants" ON "tag_path_ancestors"."descendant_id" = "tag_path_descendants"."ancestor_id"
    WHERE
      "tag_path_ancestors"."descendant_id" = $1
      AND "tag_path_descendants"."ancestor_id" = $2
      AND "tag_path_ancestors"."ancestor_id" <> $3
      AND "tag_path_descendants"."descendant_id" <> $4
  )'''
rows_affected = 0
rows_returned = 0

[[queries]]
sql = '''
DELETE FROM
  "tag_paths"
WHERE
  ("ancestor_id", "descendant_id", "distance") IN (
    SELECT
      "ancestor_id",
      "descendant_id",
      "distance"
    WHERE
      "descendant_id" = $1
      AND "ancestor_id" <> "descendant_id"
  )'''
rows_affected = 0
rows_returned = 0

[[queries]]
sql = 'RELEASE SAVEPOINT _sqlx_savepoint_1'
rows_affected = 0
rows_returned = 0

[[queries]]
sql = '''
INSERT INTO
  "tag_paths" ("ancestor_id", "descendant_id", "distance")
SELECT
  "ancestor_id",
  $1,
  "distance" + $2
FROM
  "tag_paths"
WHERE
  "descendant_id" = $3'''
rows_affected = 0
rows_returned = 0
